examples/c/error-codes/violates-constraint/fatal/CV-TDL1-bad-static.output
CV-TDL1-bad-static.c:5:13: error: extern declaration of 'a' follows non-extern declaration
 extern int a;
            ^
CV-TDL1-bad-static.c:4:6: note: previous definition is here
 int a;
     ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
